--- a/charts/gitlab/gprd/.gitlab-ci.yml
+++ b/charts/gitlab/gprd/.gitlab-ci.yml
@@ -51,9 +51,7 @@ stages:
   - qa
   - staging-release
   - package
-  - release-package
   - cleanup
-  - report
 
 before_script:
   - source scripts/ci/autodevops.sh
@@ -65,7 +63,7 @@ before_script:
   - &stable_branch_ref /^[0-9]+-[0-9]+-stable$/
 
 tag_auto_deploy:
-  stage: staging-release
+  stage: package
   rules:
     - if: $CI_PIPELINE_TRIGGERED && $TRIGGER_JOB == "tag_auto_deploy" && $AUTO_DEPLOY_TAG && $REPOSITORY_PAT
   script:
@@ -137,7 +135,7 @@ lint_package:
     - helm repo add gitlab https://charts.gitlab.io
     - helm repo add jetstack https://charts.jetstack.io
     - helm dependencies update
-    - helm kubeval . --force-color --strict --set certmanager-issuer.email=support@gitlab.com $HELM_EXTRAS --skip-kinds "CustomResourceDefinition" -v $KUBE_VERSION
+    - helm kubeval . --force-color --strict --set certmanager-issuer.email=support@gitlab.com --skip-kinds "CustomResourceDefinition" -v $KUBE_VERSION
   except:
     <<: *deps_pipeline
     refs:
@@ -146,10 +144,10 @@ lint_package:
       - /(^docs[\/-].+|.+-docs$)/
       - *com_auto_deploy_branch_ref
 
-"Validate 1.19.16":
+"Validate 1.16.15":
   extends: .kubeval
   variables:
-    KUBE_VERSION: "1.19.16"
+    KUBE_VERSION: "1.16.15"
     KUBEVAL_SCHEMA_LOCATION: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/"
 
 "Validate 1.20.7":
@@ -157,13 +155,6 @@ lint_package:
   variables:
     KUBE_VERSION: "1.20.7"
     KUBEVAL_SCHEMA_LOCATION: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/"
-
-"Validate 1.22.3":
-  extends: .kubeval
-  variables:
-    KUBE_VERSION: "1.22.3"
-    KUBEVAL_SCHEMA_LOCATION: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/"
-    HELM_EXTRAS: "--set global.ingress.apiVersion=networking.k8s.io/v1"
 
 .review_template:
   stage: review
@@ -501,7 +492,7 @@ check_docs_markdown:
 
 # Perform link checks on published HTML files
 check_docs_links:
-  image: registry.gitlab.com/gitlab-org/gitlab-docs/lint-html:alpine-3.14-ruby-2.7.5-08847baa
+  image: registry.gitlab.com/gitlab-org/gitlab-docs/lint-html:alpine-3.14-ruby-2.7.4-0fae0f62
   stage: prepare
   cache: {}
   dependencies: []
@@ -767,47 +758,22 @@ wait_for_dev_images:
     refs:
       - /.*-stable/@gitlab/charts/gitlab
 
-.publish_chart_package:
-  # publish chart into repo's Packages
-  stage: package
+staging_release:
+  stage: staging-release
   image: "registry.gitlab.com/gitlab-org/gitlab-build-images:gitlab-charts-build-base-helm-3"
   variables:
-    # **Required** variable to set channel to which chart will be published:
-    # CHANNEL: "unstable"
-    VERSION_SUFFIX: ""
+    CHANNEL: "stable"
   script:
+    - if [[ $CI_COMMIT_REF_NAME =~ $AUTO_DEPLOY_TAG_REGEX ]]; then export CHANNEL="autodeploy"; fi
     - helm dependency update
-    - EXTRACTED_VERSION=$(awk '/^version/ {print $2}' Chart.yaml)
-    - VERSION=${VERSION:-${EXTRACTED_VERSION}}
-    - echo "Packaging ${VERSION}${VERSION_SUFFIX} for ${CHANNEL}"
-    - helm package --version=${VERSION}${VERSION_SUFFIX} .
+    - helm package .
     - chart_file=$(ls -l gitlab*.tgz | head -n 1 | awk '{print $NF}')
     - curl --request POST --user gitlab-ci-token:$CI_JOB_TOKEN --form "chart=@${chart_file}" "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/helm/api/${CHANNEL}/charts"
-
-publish_tagged_package:
-  extends: .publish_chart_package
-  variables:
-    CHANNEL: "stable"
-  rules:
-    - if: '$CI_SERVER_HOST == "dev.gitlab.org" && $CI_PROJECT_PATH == "gitlab/charts/gitlab" && $CI_COMMIT_TAG'
-
-publish_audodeploy_package:
-  extends: .publish_chart_package
-  variables:
-    CHANNEL: "autodeploy"
-  rules:
-    - if: '$CI_SERVER_HOST == "dev.gitlab.org" && $CI_PROJECT_PATH == "gitlab/charts/gitlab" && $CI_COMMIT_TAG && $COMMIT_REF_NAME =~ /$AUTO_DEPLOY_TAG_REGEX/'
-
-publish_devel_package:
-  extends: .publish_chart_package
-  variables:
-    CHANNEL: "devel"
-    VERSION_SUFFIX: "-${CI_PIPELINE_ID}"
-  rules:
-    - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH'
+  only:
+    - tags@gitlab/charts/gitlab
 
 release_package:
-  stage: release-package
+  stage: package
   timeout: 2h
   image: registry.gitlab.com/gitlab-org/gitlab-omnibus-builder/ruby_docker
   script:
@@ -818,7 +784,6 @@ release_package:
         UNSTABLE="false"
       fi
     - bash scripts/wait_for_images.sh
-    # trigger pipeline for https://gitlab.com/charts/charts.gitlab.io
     - curl -fS --request POST --form "token=${COM_CHARTS_TRIGGER_TOKEN}" --form ref=master
         --form "variables[CHART_NAME]=$CI_PROJECT_NAME"
         --form "variables[RELEASE_REF]=$CI_COMMIT_REF_NAME"
@@ -909,7 +874,7 @@ qa_eks_manual_full_suite:
   when: manual
 
 create_operator_mr:
-  stage: release-package
+  stage: package
   timeout: 2h
   image: registry.gitlab.com/gitlab-org/gitlab-omnibus-builder/ruby_docker
   allow_failure: true
@@ -925,12 +890,3 @@ create_operator_mr:
       when: manual
     - when: never
   needs: []
-
-issue-bot:
-  stage: report
-  image: registry.gitlab.com/gitlab-org/distribution/issue-bot:latest
-  script: /issue-bot
-  rules:
-    # Only run when pipeline fails for the default branch on gitlab.com
-    - if: '$CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH && $CI_SERVER_HOST == "gitlab.com"'
-      when: on_failure
