--- a/charts/gitlab/gprd/charts/nginx-ingress/templates/clusterrolebinding.yaml
+++ b/charts/gitlab/gprd/charts/nginx-ingress/templates/clusterrolebinding.yaml
@@ -5,7 +5,6 @@ metadata:
   labels:
     {{- include "gitlab.standardLabels" . | nindent 4 }}
     {{- include "gitlab.commonLabels" . | nindent 4 }}
-    component: "{{ .Values.controller.name }}"
     {{- include "ingress-nginx.labels" . | nindent 4 }}
   name: {{ include "ingress-nginx.fullname" . }}
 roleRef:
@@ -15,5 +14,5 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: {{ template "ingress-nginx.serviceAccountName" . }}
-    namespace: {{ .Release.Namespace | quote }}
+    namespace: {{ .Release.Namespace }}
 {{- end }}
