--- a/charts/gitlab/gprd/charts/nginx-ingress/templates/controller-role.yaml
+++ b/charts/gitlab/gprd/charts/nginx-ingress/templates/controller-role.yaml
@@ -9,7 +9,6 @@ metadata:
     {{- include "ingress-nginx.labels" . | nindent 4 }}
     app.kubernetes.io/component: controller
   name: {{ include "ingress-nginx.fullname" . }}
-  namespace: {{ .Release.Namespace }}
 rules:
   - apiGroups:
       - ""
@@ -35,9 +34,11 @@ rules:
     verbs:
       - get
       - list
+      - update
       - watch
   - apiGroups:
-      - networking.k8s.io
+      - extensions
+      - "networking.k8s.io" # k8s 1.14+
     resources:
       - ingresses
     verbs:
@@ -45,13 +46,14 @@ rules:
       - list
       - watch
   - apiGroups:
-      - networking.k8s.io
+      - extensions
+      - "networking.k8s.io" # k8s 1.14+
     resources:
       - ingresses/status
     verbs:
       - update
   - apiGroups:
-      - networking.k8s.io
+      - "networking.k8s.io" # k8s 1.14+
     resources:
       - ingressclasses
     verbs:
@@ -63,7 +65,7 @@ rules:
     resources:
       - configmaps
     resourceNames:
-      - {{ .Values.controller.electionID }}
+      - {{ .Values.controller.electionID }}-{{ template "ingress-nginx.controller.ingress-class" . }}
     verbs:
       - get
       - update
@@ -76,6 +78,14 @@ rules:
   - apiGroups:
       - ""
     resources:
+      - endpoints
+    verbs:
+      - create
+      - get
+      - update
+  - apiGroups:
+      - ""
+    resources:
       - events
     verbs:
       - create
@@ -84,10 +94,6 @@ rules:
   - apiGroups:      [{{ template "podSecurityPolicy.apiGroup" . }}]
     resources:      ['podsecuritypolicies']
     verbs:          ['use']
-    {{- with .Values.controller.existingPsp }}
-    resourceNames:  [{{ . }}]
-    {{- else }}
     resourceNames:  [{{ include "ingress-nginx.fullname" . }}]
-    {{- end }}
 {{- end }}
 {{- end }}
