--- a/charts/gitlab/gprd/charts/nginx-ingress/values.yaml
+++ b/charts/gitlab/gprd/charts/nginx-ingress/values.yaml
@@ -1,29 +1,17 @@
 ## nginx configuration
-## Ref: https://github.com/kubernetes/ingress-nginx/blob/main/docs/user-guide/nginx-configuration/index.md
+## Ref: https://github.com/kubernetes/ingress-nginx/blob/master/controllers/nginx/configuration.md
 ##
-
-## Overrides for generated resource names
-# See templates/_helpers.tpl
-# nameOverride:
-# fullnameOverride:
-
 controller:
+  # Added by GitLab for parity with previous version.
   name: controller
   image:
-    registry: k8s.gcr.io
     repository: registry.gitlab.com/gitlab-org/cloud-native/mirror/images/ingress-nginx/controller
-    tag: "v1.0.4"
-    digest: sha256:545cff00370f28363dad31e3b59a94ba377854d3a11f18988f5f9e56841ef9ef
+    tag: "v0.41.2"
+    digest: sha256:1f4f402b9c14f3ae92b11ada1dfe9893a88f0faeb0b2f4b903e2c67a0c3bf0de
     pullPolicy: IfNotPresent
     # www-data -> uid 101
     runAsUser: 101
     allowPrivilegeEscalation: true
-
-  # Use an existing PSP instead of creating one
-  existingPsp: ""
-
-  # Configures the controller container name
-  containerName: controller
 
   # Configures the ports the nginx-controller listens on
   containerPort:
@@ -37,7 +25,7 @@ controller:
   ##
   configAnnotations: {}
 
-  # Will add custom headers before sending traffic to backends according to https://github.com/kubernetes/ingress-nginx/tree/main/docs/examples/customization/custom-headers
+  # Will add custom headers before sending traffic to backends according to https://github.com/kubernetes/ingress-nginx/tree/master/docs/examples/customization/custom-headers
   proxySetHeaders: {}
 
   # Will add custom headers before sending response traffic to the client according to: https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/configmap/#add-headers
@@ -45,9 +33,6 @@ controller:
 
   # Optionally customize the pod dnsConfig.
   dnsConfig: {}
-
-  # Optionally customize the pod hostname.
-  hostname: {}
 
   # Optionally change this to ClusterFirstWithHostNet in case you have 'hostNetwork: true'.
   # By default, while using host network, name resolution uses the host's DNS. If you wish nginx-controller
@@ -57,20 +42,6 @@ controller:
   # Bare-metal considerations via the host network https://kubernetes.github.io/ingress-nginx/deploy/baremetal/#via-the-host-network
   # Ingress status was blank because there is no Service exposing the NGINX Ingress controller in a configuration using the host network, the default --publish-service flag used in standard cloud setups does not apply
   reportNodeInternalIp: false
-
-  # Process Ingress objects without ingressClass annotation/ingressClassName field
-  # Overrides value for --watch-ingress-without-class flag of the controller binary
-  # Defaults to false
-  watchIngressWithoutClass: false
-
-  # Process IngressClass per name (additionally as per spec.controller)
-  ingressClassByName: false
-
-  # This configuration defines if Ingress Controller should allow users to set
-  # their own *-snippet annotations, otherwise this is forbidden / dropped
-  # when users add those annotations.
-  # Global snippets in ConfigMap are still respected
-  allowSnippetAnnotations: true
 
   # Required for use with CNI based kubernetes installations (such as ones set up by kubeadm),
   # since CNI and hostport don't mix yet. Can be deprecated once https://github.com/kubernetes/kubernetes/issues/23920
@@ -90,18 +61,9 @@ controller:
   ##
   electionID: ingress-controller-leader
 
-  # This section refers to the creation of the IngressClass resource
-  # IngressClass resources are supported since k8s >= 1.18 and required since k8s >= 1.19
-  ingressClassResource:
-    name: nginx
-    enabled: true
-    default: false
-    controllerValue: "k8s.io/ingress-nginx"
-
-    # Parameters is a link to a custom resource containing additional
-    # configuration for the controller. This is optional if the controller
-    # does not require extra parameters.
-    parameters: {}
+  ## Name of the ingress class to route through this controller
+  ##
+  ingressClass: nginx
 
   # labels to add to the pod container metadata
   podLabels: {}
@@ -133,31 +95,27 @@ controller:
   ##
   scope:
     enabled: false
-    namespace: ""   # defaults to $(POD_NAMESPACE)
+    namespace: ""   # defaults to .Release.Namespace
 
   ## Allows customization of the configmap / nginx-configmap namespace
   ##
-  configMapNamespace: ""   # defaults to $(POD_NAMESPACE)
+  configMapNamespace: ""   # defaults to .Release.Namespace
 
   ## Allows customization of the tcp-services-configmap
   ##
   tcp:
-    configMapNamespace: ""   # defaults to $(POD_NAMESPACE)
+    configMapNamespace: ""   # defaults to .Release.Namespace
     ## Annotations to be added to the tcp config configmap
     annotations: {}
 
   ## Allows customization of the udp-services-configmap
   ##
   udp:
-    configMapNamespace: ""   # defaults to $(POD_NAMESPACE)
+    configMapNamespace: ""   # defaults to .Release.Namespace
     ## Annotations to be added to the udp config configmap
     annotations: {}
 
-  # Maxmind license key to download GeoLite2 Databases
-  # https://blog.maxmind.com/2019/12/18/significant-changes-to-accessing-and-using-geolite2-databases
-  maxmindLicenseKey: ""
-
-  ## Additional command line arguments to pass to nginx-ingress-controller
+  ## Additional command line arguments to pass to ingress-nginx-controller
   ## E.g. to specify the default SSL certificate you can use
   ## extraArgs:
   ##   default-ssl-certificate: "<namespace>/<secret_name>"
@@ -272,55 +230,29 @@ controller:
   ## Node labels for controller pod assignment
   ## Ref: https://kubernetes.io/docs/user-guide/node-selection/
   ##
-  nodeSelector:
-    kubernetes.io/os: linux
+  nodeSelector: {}
 
   ## Liveness and readiness probe values
   ## Ref: https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle/#container-probes
   ##
-  # startupProbe:
-  #   httpGet:
-  #     # should match container.healthCheckPath
-  #     path: "/healthz"
-  #     port: 10254
-  #     scheme: HTTP
-  #   initialDelaySeconds: 5
-  #   periodSeconds: 5
-  #   timeoutSeconds: 2
-  #   successThreshold: 1
-  #   failureThreshold: 5
   livenessProbe:
-    httpGet:
-      # should match container.healthCheckPath
-      path: "/healthz"
-      port: 10254
-      scheme: HTTP
-    initialDelaySeconds: 10
-    periodSeconds: 10
-    timeoutSeconds: 1
-    successThreshold: 1
     failureThreshold: 5
-  readinessProbe:
-    httpGet:
-      # should match container.healthCheckPath
-      path: "/healthz"
-      port: 10254
-      scheme: HTTP
     initialDelaySeconds: 10
     periodSeconds: 10
-    timeoutSeconds: 1
     successThreshold: 1
+    timeoutSeconds: 1
+    port: 10254
+  readinessProbe:
     failureThreshold: 3
-
+    initialDelaySeconds: 10
+    periodSeconds: 10
+    successThreshold: 1
+    timeoutSeconds: 1
+    port: 10254
 
   # Path of the health check endpoint. All requests received on the port defined by
   # the healthz-port parameter are forwarded internally to this path.
   healthCheckPath: "/healthz"
-
-  # Address to bind the health check endpoint.
-  # It is better to set this option to the internal node address
-  # if the ingress nginx controller is running in the hostNetwork: true mode.
-  healthCheckHost: ""
 
   ## Annotations to be added to controller pods
   ##
@@ -349,19 +281,6 @@ controller:
     maxReplicas: 11
     targetCPUUtilizationPercentage: 50
     targetMemoryUtilizationPercentage: 50
-    behavior: {}
-      # scaleDown:
-      #   stabilizationWindowSeconds: 300
-      #  policies:
-      #   - type: Pods
-      #     value: 1
-      #     periodSeconds: 180
-      # scaleUp:
-      #   stabilizationWindowSeconds: 300
-      #   policies:
-      #   - type: Pods
-      #     value: 2
-      #     periodSeconds: 60
 
   autoscalingTemplate: []
   # Custom or additional autoscaling metrics
@@ -386,11 +305,6 @@ controller:
     pollingInterval: 30
     cooldownPeriod: 300
     restoreToOriginalReplicaCount: false
-    scaledObject:
-      annotations: {}
-      # Custom annotations for ScaledObject resource
-      #  annotations:
-      # key: value
     triggers: []
  #     - type: prometheus
  #       metadata:
@@ -441,30 +355,19 @@ controller:
     enableHttp: true
     enableHttps: true
 
-    ## Set external traffic policy to: "Local" to preserve source IP on providers supporting it.
+    ## Set external traffic policy to: "Local" to preserve source IP on
+    ## providers supporting it
     ## Ref: https://kubernetes.io/docs/tutorials/services/source-ip/#source-ip-for-services-with-typeloadbalancer
     # externalTrafficPolicy: ""
 
-    ## Must be either "None" or "ClientIP" if set. Kubernetes will default to "None".
-    ## Ref: https://kubernetes.io/docs/concepts/services-networking/service/#virtual-ips-and-service-proxies
+    # Must be either "None" or "ClientIP" if set. Kubernetes will default to "None".
+    # Ref: https://kubernetes.io/docs/concepts/services-networking/service/#virtual-ips-and-service-proxies
     # sessionAffinity: ""
 
-    ## Specifies the health check node port (numeric port number) for the service. If healthCheckNodePort isn’t specified,
-    ## the service controller allocates a port from your cluster’s NodePort range.
-    ## Ref: https://kubernetes.io/docs/tasks/access-application-cluster/create-external-load-balancer/#preserving-the-client-source-ip
+    # specifies the health check node port (numeric port number) for the service. If healthCheckNodePort isn’t specified,
+    # the service controller allocates a port from your cluster’s NodePort range.
+    # Ref: https://kubernetes.io/docs/tasks/access-application-cluster/create-external-load-balancer/#preserving-the-client-source-ip
     # healthCheckNodePort: 0
-
-    ## Represents the dual-stack-ness requested or required by this Service. Possible values are
-    ## SingleStack, PreferDualStack or RequireDualStack.
-    ## The ipFamilies and clusterIPs fields depend on the value of this field.
-    ## Ref: https://kubernetes.io/docs/concepts/services-networking/dual-stack/
-    ipFamilyPolicy: "SingleStack"
-
-    ## List of IP families (e.g. IPv4, IPv6) assigned to the service. This field is usually assigned automatically
-    ## based on cluster configuration and the ipFamilyPolicy field.
-    ## Ref: https://kubernetes.io/docs/concepts/services-networking/dual-stack/
-    ipFamilies:
-      - IPv4
 
     ports:
       http: 80
@@ -493,8 +396,6 @@ controller:
     internal:
       enabled: false
       annotations: {}
-
-      # loadBalancerIP: ""
 
       ## Restrict access For LoadBalancer service. Defaults to 0.0.0.0/0.
       loadBalancerSourceRanges: []
@@ -555,9 +456,6 @@ controller:
     namespaceSelector: {}
     objectSelector: {}
 
-    # Use an existing PSP instead of creating one
-    existingPsp: ""
-
     service:
       annotations: {}
       # clusterIP: ""
@@ -567,35 +465,17 @@ controller:
       servicePort: 443
       type: ClusterIP
 
-    createSecretJob:
-      resources: {}
-        # limits:
-        #   cpu: 10m
-        #   memory: 20Mi
-        # requests:
-        #   cpu: 10m
-        #   memory: 20Mi
-
-    patchWebhookJob:
-      resources: {}
-
     patch:
       enabled: true
       image:
-        registry: k8s.gcr.io
-        image: ingress-nginx/kube-webhook-certgen
-        # for backwards compatibility consider setting the full image url via the repository value below
-        # use *either* current default registry/image or repository format or installing chart by providing the values.yaml will fail
-        # repository:
-        tag: v1.1.1
-        digest: sha256:64d8c73dca984af206adf9d6d7e46aa550362b1d7a01f3a0a91b20cc67868660
+        repository: docker.io/jettech/kube-webhook-certgen
+        tag: v1.5.0
         pullPolicy: IfNotPresent
       ## Provide a priority class name to the webhook patching job
       ##
       priorityClassName: ""
       podAnnotations: {}
-      nodeSelector:
-        kubernetes.io/os: linux
+      nodeSelector: {}
       tolerations: []
       runAsUser: 2000
 
@@ -618,7 +498,7 @@ controller:
 
       # loadBalancerIP: ""
       loadBalancerSourceRanges: []
-      servicePort: 10254
+      servicePort: 9913
       type: ClusterIP
       # externalTrafficPolicy: ""
       # nodePort: ""
@@ -626,8 +506,6 @@ controller:
     serviceMonitor:
       enabled: false
       additionalLabels: {}
-      # The label to use to retrieve the job name from.
-      # jobLabel: "app.kubernetes.io/name"
       namespace: ""
       namespaceSelector: {}
       # Default: scrape .Release.Namespace only
@@ -697,17 +575,20 @@ controller:
 ##
 revisionHistoryLimit: 10
 
+# Maxmind license key to download GeoLite2 Databases
+# https://blog.maxmind.com/2019/12/18/significant-changes-to-accessing-and-using-geolite2-databases
+maxmindLicenseKey: ""
+
 ## Default 404 backend
 ##
 defaultBackend:
   ##
   enabled: false
 
-  name: defaultbackend
+  name: default-backend
   image:
     repository: registry.gitlab.com/gitlab-org/cloud-native/mirror/images/defaultbackend-amd64
     tag: "1.5"
-    digest: sha256:4dc5e07c8ca4e23bddb3153737d7b8c556e5fb2f29c4558b7cd6e6df99c512c7
     pullPolicy: IfNotPresent
     # nobody user -> uid 65534
     runAsUser: 65534
@@ -715,15 +596,11 @@ defaultBackend:
     readOnlyRootFilesystem: true
     allowPrivilegeEscalation: false
 
-  # Use an existing PSP instead of creating one
-  existingPsp: ""
-
   extraArgs: {}
 
   serviceAccount:
     create: true
-    name: ""
-    automountServiceAccountToken: true
+    name:
   ## Additional environment variables to set for defaultBackend pods
   extraEnvs: []
 
@@ -769,8 +646,7 @@ defaultBackend:
   ## Node labels for default backend pod assignment
   ## Ref: https://kubernetes.io/docs/user-guide/node-selection/
   ##
-  nodeSelector:
-    kubernetes.io/os: linux
+  nodeSelector: {}
 
   ## Annotations to be added to default backend pods
   ##
@@ -788,18 +664,7 @@ defaultBackend:
   #   cpu: 10m
   #   memory: 20Mi
 
-  extraVolumeMounts: []
-  ## Additional volumeMounts to the default backend container.
-  #  - name: copy-portal-skins
-  #   mountPath: /var/lib/lemonldap-ng/portal/skins
-
-  extraVolumes: []
-  ## Additional volumes to the default backend pod.
-  #  - name: copy-portal-skins
-  #    emptyDir: {}
-
   autoscaling:
-    annotations: {}
     enabled: false
     minReplicas: 1
     maxReplicas: 2
@@ -823,7 +688,7 @@ defaultBackend:
 
   priorityClassName: ""
 
-## Enable RBAC as per https://github.com/kubernetes/ingress-nginx/blob/main/docs/deploy/rbac.md and https://github.com/kubernetes/ingress-nginx/issues/266
+## Enable RBAC as per https://github.com/kubernetes/ingress/tree/master/examples/rbac/nginx and https://github.com/kubernetes/ingress/issues/266
 rbac:
   create: true
   scope: false
@@ -835,8 +700,7 @@ podSecurityPolicy:
 
 serviceAccount:
   create: true
-  name: ""
-  automountServiceAccountToken: true
+  name:
 
 ## Optional array of imagePullSecrets containing private registry credentials
 ## Ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
@@ -844,21 +708,17 @@ imagePullSecrets: []
 # - name: secretName
 
 # TCP service key:value pairs
-# Ref: https://github.com/kubernetes/ingress-nginx/blob/main/docs/user-guide/exposing-tcp-udp-services.md
+# Ref: https://github.com/kubernetes/contrib/tree/master/ingress/controllers/nginx/examples/tcp
 ##
 tcp: {}
 #  8080: "default/example-tcp-svc:9000"
 
 # UDP service key:value pairs
-# Ref: https://github.com/kubernetes/ingress-nginx/blob/main/docs/user-guide/exposing-tcp-udp-services.md
+# Ref: https://github.com/kubernetes/contrib/tree/master/ingress/controllers/nginx/examples/udp
 ##
 udp: {}
 #  53: "kube-system/kube-dns:53"
 
-# A base64ed Diffie-Hellman parameter
-# This can be generated with: openssl dhparam 4096 2> /dev/null | base64
-# Ref: https://github.com/kubernetes/ingress-nginx/tree/main/docs/examples/customization/ssl-dh-param
-dhParam:
 
 ## GitLab-provided values starting below
 
