--- a/charts/gitlab/gprd/values.yaml
+++ b/charts/gitlab/gprd/values.yaml
@@ -69,7 +69,7 @@ global:
 
   ## https://docs.gitlab.com/charts/charts/globals#configure-ingress-settings
   ingress:
-    apiVersion: ""
+    apiVersion:
     configureCertmanager: true
     provider: nginx
     annotations: {}
@@ -396,7 +396,17 @@ global:
       # prevent the use of LDAP for sign-in via web.
       preventSignin: false
       servers: {}
-      ## See documentation for complete example of a configured LDAP server
+      ## 'main' is the GitLab 'provider ID' of this LDAP server
+      # main:
+      #   label: 'LDAP'
+      #   host: '_your_ldap_server'
+      #   port: 636
+      #   uid: 'sAMAccountName'
+      #   bind_dn: '_the_full_dn_of_the_user_you_will_bind_with'
+      #   password:
+      #     secret: _the_secret_containing_your_ldap_password
+      #     key: _the_key_which_holds_your_ldap_password
+      #   encryption: 'plain'
 
     ## https://docs.gitlab.com/charts/charts/globals#kas-settings
     gitlab_kas: {}
@@ -734,9 +744,6 @@ nginx-ingress:
       server-tokens: "false"
     service:
       externalTrafficPolicy: "Local"
-    ingressClassByName: false
-    ingressClassResource:
-      name: "{{ .Release.Name }}-nginx"
     resources:
       requests:
         cpu: 100m
@@ -767,10 +774,7 @@ nginx-ingress:
         memory: 5Mi
   rbac:
     create: true
-    # Needed for k8s 1.20 and 1.21
-    # https://github.com/kubernetes/ingress-nginx/issues/7510
-    # https://github.com/kubernetes/ingress-nginx/issues/7519
-    scope: false
+    scope: true
   serviceAccount:
     create: true
 
